tests/compiler/unify_function_branches_2.kk
enum Boolean = #true #false
enum Bomb = #bomb
let and: \(Boolean, Boolean) => Boolean = 
  \(#bomb, #true) => #true
